name:                asteroid
version:             0.1.0.0
license-file:        LICENSE
author:              Harrison Foko & Floris Roos
maintainer:          test
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable asteroid
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       containers,
                       random,
                       time

  hs-source-dirs:      src
  default-language:    Haskell2010